--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -230,7 +230,11 @@ button, .button{
 
   .welcome-message-container{
     .logo{
+      margin-bottom: 40px;
 
+      img{
+        height: 160px;
+      }
     }
   }
 }
