--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3521,32 +3521,44 @@ button:active, .button:active {
   /* line 211, ../../styles/_global.scss */
   .text {
     padding: 0 30px;
+    font-size: 14px;
+    line-height: 20px;
   }
 }
 
-/* line 223, ../../styles/_global.scss */
+/* line 225, ../../styles/_global.scss */
 .home button, .home .button {
   margin-top: 20px;
 }
-/* line 227, ../../styles/_global.scss */
+/* line 229, ../../styles/_global.scss */
 .home .welcome-message-text {
   margin-bottom: 10px;
 }
-/* line 232, ../../styles/_global.scss */
+/* line 234, ../../styles/_global.scss */
 .home .welcome-message-container .logo {
   margin-bottom: 40px;
 }
-/* line 235, ../../styles/_global.scss */
+/* line 237, ../../styles/_global.scss */
 .home .welcome-message-container .logo img {
   height: 160px;
 }
+@media (max-width: 767px) {
+  /* line 234, ../../styles/_global.scss */
+  .home .welcome-message-container .logo {
+    margin-bottom: 30px;
+  }
+  /* line 244, ../../styles/_global.scss */
+  .home .welcome-message-container .logo img {
+    height: 110px;
+  }
+}
 
-/* line 242, ../../styles/_global.scss */
+/* line 252, ../../styles/_global.scss */
 .blue, strong.blue {
   color: #4e66f4 !important;
 }
 
-/* line 245, ../../styles/_global.scss */
+/* line 255, ../../styles/_global.scss */
 .red, strong.red {
   color: #ea4b4b !important;
 }
@@ -4047,7 +4059,7 @@ body.menu-open .menu-burger {
   padding: 0;
   text-align: right;
   display: block;
-  margin: 30px 0 0 0;
+  margin: 22px 0 0 0;
 }
 /* line 84, ../../styles/_menu.scss */
 .menu-burger .right-side .members li {
